# TecnicasProgramacionConcurrente

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  log.txt  main.cpp  mines_map.txt
config/: ConfigFiles.h  actors.config.csv  clients.config.csv  distribution_centers.csv  internet-orders.csv  internet.config.csv  points_of_sale.csv  producers.csv  simulation.config.csv
fifo/: Clients-PointOfSale0.fifo  Clients-PointOfSale1.fifo  Clients-PointOfSale2.fifo  Clients-PointOfSale3.fifo  DistributionCenter0.fifo  PointOfSale0.fifo  log.txt.fifo
src/: PrimaveraConcurrente.cpp  PrimaveraConcurrente.h  config.rs  leader.rs  logger.rs  main.cpp  main.rs  miner.rs  mines_map.rs  synchronization.rs
src/actors/: Actor.cpp  Actor.h  ActorInfo.cpp  ActorInfo.h  DistributionCenter.cpp  DistributionCenter.h  PointOfSale.cpp  PointOfSale.h  Producer.cpp  Producer.h
src/comunication/: Data.cpp  Data.h  DataReceiver.cpp  DataReceiver.h  DataSender.cpp  DataSender.h  ExitComunicator.cpp  ExitComunicator.h  FlowerProtocol.cpp  FlowerProtocol.h  FlowerReceiver.cpp  FlowerReceiver.h  FlowerSender.cpp  FlowerSender.h
src/concurrency/: Fifo.cpp  Fifo.h  Process.cpp  Process.h  ProcessInfo.cpp  ProcessInfo.h  Runnable.h  SharedMemory.h
src/config/: ActorsConfig.cpp  ActorsConfig.h  ActorsCreator.cpp  ActorsCreator.h  ClientsConfig.cpp  ClientsConfig.h  Config.cpp  Config.h  SimulationConfig.h
src/flower/: Flower.cpp  Flower.h  FlowerStock.cpp  FlowerStock.h  FlowerTransaction.cpp  FlowerTransaction.h  FlowerType.cpp  FlowerType.h  (+2 more)
tp1/: .gitignore  CMakeLists.txt  README.md
(+132 files in other folders)
